# light-music-visualizer

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md  clippy.toml  deny.toml  release.toml  rustfmt.toml
.claude/: settings.json
.claude/hooks/: block-broad-git-add.js
.claude/skills/architect/: SKILL.md
.claude/skills/architect/references/: best-practices.md  project-context.md
.claude/skills/architect/references/templates/: adr.md  diagram-examples.md  plan.md
.claude/skills/dev/: SKILL.md
.claude/skills/dev/references/: close-ceremony-prompt.md  commit-conventions.md  project-context.md
.claude/skills/preset-author/: SKILL.md
.claude/skills/preset-author/references/: api-feedback.md  craft.md  grammar.md  render-loop.md  systems.md
.github/workflows/: ci.yml
assets/test/: README.md
core/: Cargo.toml  build.rs
core/include/: lmv_core.h
core/src/: audio.rs  ffi.rs  lib.rs  signal.rs
core/src/diag/: mod.rs
core/src/dsp/: bands.rs  fft.rs  mod.rs  novelty.rs  onset.rs  tempo.rs
core/src/preset/: expr.rs  mod.rs  schema.rs
core/src/render/: background.rs  capture.rs  context.rs  feedback.rs  kaleidoscope.rs  metrics.rs  mod.rs  overlay.rs  overlay_font.rs  text.rs  trails.rs
core/src/render/scenes/: fragment_field.rs  mod.rs  pulse.rs  reaction_diffusion.rs  spectrum.rs  starfield.rs  swarm.rs
core/src/render/scenes/lines/: curves.rs  grammar.rs  hankin.rs  lsystem.rs  mod.rs  parametric.rs  renderer.rs  star.rs  turtle.rs
core/src/render/scenes/particles/: mod.rs
core/src/scenes/: mod.rs  pulse.rs  spectrum.rs  starfield.rs
core/tests/: animation.rs  attractor.rs  beat.rs  distinctness.rs  dsp.rs  ffi.rs  golden.rs  hygiene.rs  preset.rs  reaction_diffusion.rs  reactivity.rs  sanity.rs
core/tests/fixtures/: README.md  attractor.toml  fragment_field.toml  lsystem.toml  parametric_curve.toml  reaction_diffusion.toml  star_pattern.toml  swarm.toml
docs/: capturing.md  design-backlog.md  generative-techniques-catalogue.md  nfr.md  on-device-validation.md  presets.md  releasing.md
docs/adrs/: 0001-rust-core-wgpu-cabi-foobar-shim.md  0002-layered-preset-architecture.md  0003-c-abi-v1-surface.md  0004-living-behavioral-spec-layer.md  0005-versioning-and-release-cadence.md  0006-c-abi-v2-preset-loading.md  0007-line-geometry-generators.md  0008-c-abi-v3-diagnostics.md  0009-glyphon-text-rendering.md  0010-accept-gpu-driver-memory-floor.md  0011-image-crate-for-capture-tooling.md  0012-stateful-feedback-render-system.md  0013-c-abi-v4-render-dt.md  0014-preset-dir-override-for-dev-iteration.md  0015-gpu-compute-particle-idiom.md  0016-gpu-tests-opt-in-ci-scope.md  0017-preset-author-skill-lane.md  0018-engine-wide-scene-compositing.md  0019-eased-parameters.md  0020-preset-grammar-v2-branching-functions-tempo.md  0021-shared-palette-system.md  0022-build-time-preset-embedding.md  0023-golden-drift-guard-uses-frozen-fixtures.md  0024-cross-preset-transitions.md  0025-foobar-component-version-single-sourced.md  0026-full-composite-coverage-fullscreen-scenes.md  0027-scene-rotation-constant-default-calmer-cadence.md  README.md
docs/plans/: 0001-core-and-standalone-mvp.md  0002-rust-enforcement-tooling.md  0003-generative-scenes-and-presets.md  0004-foobar-ui-element-panel.md  0005-miri-ring-extraction.md  0006-versioning-wiring.md  0007-curated-preset-library.md  0008-preset-browse-overlay.md  0009-live-performance-features.md  0010-line-geometry-scenes.md  0011-diagnostics-and-memory-trim.md  0012-memory-floor-measure-and-scene-cull.md  0013-headless-scene-capture.md  0014-reaction-diffusion-feedback-scene.md  0015-preset-dir-override-and-live-iteration.md  0016-gpu-compute-particle-scenes.md  0017-ci-green-advisory-and-gpu-tests.md  0018-engine-wide-visual-enrichment.md  0019-preset-grammar-v2.md  0020-shared-palette-system.md  0021-decouple-preset-content-from-code.md  0022-golden-fixtures-decouple-content.md  0023-cross-preset-transitions.md  0024-foobar-component-version-single-source.md  0025-full-composite-coverage.md  0026-calmer-scene-rotation.md  README.md
docs/plans/done/: 0001-core-and-standalone-mvp.md  0002-rust-enforcement-tooling.md  0003-generative-scenes-and-presets.md  0004-foobar-ui-element-panel.md  0005-miri-ring-extraction.md  0006-versioning-wiring.md  0007-curated-preset-library.md  0008-preset-browse-overlay.md  0009-live-performance-features.md  0010-line-geometry-scenes.md  0011-diagnostics-and-memory-trim.md  0012-memory-floor-measure-and-scene-cull.md  0013-headless-scene-capture.md  0014-reaction-diffusion-feedback-scene.md  0016-gpu-compute-particle-scenes.md  0017-ci-green-advisory-and-gpu-tests.md  0018-engine-wide-visual-enrichment.md  0021-decouple-preset-content-from-code.md  0022-golden-fixtures-decouple-content.md  0024-foobar-component-version-single-source.md  0026-calmer-scene-rotation.md
docs/specs/: 0001-c-abi.md  0002-ring-determinism.md  README.md
lmv-ring/: Cargo.toml
lmv-ring/src/: lib.rs
plugin-foobar/: README.md  build.ps1  foo_lmv.cpp
presets/: README.md  attractor_clifford.toml  attractor_dejong.toml  attractor_lorenz.toml  attractor_thomas.toml  fragment_aurora.toml  fragment_ember.toml  fragment_glacier.toml  fragment_kaleido.toml  fragment_pulse.toml  fragment_smooth.toml  fragment_warp.toml  lsystem_arrowhead.toml  lsystem_fern.toml  reaction_coral.toml  reaction_coral_bloom.toml  reaction_coral_head.toml  reaction_reef.toml  rose_atmosphere.toml  rose_bloom.toml  rose_draw.toml  rose_kaleidoscope.toml  rose_star.toml  rose_trails.toml  rose_web.toml  rose_zoom.toml  star_rosette.toml  swarm_burst.toml  swarm_dense.toml  swarm_drift.toml  swarm_flow.toml  swarm_storm.toml
standalone/: Cargo.toml
standalone/examples/: floor.rs  shot.rs
standalone/src/: capture_mac.rs  capture_win.rs  config.rs  diaglog.rs  director.rs  main.rs  overlay.rs  rss.rs  soak.rs
