[workspace]
resolver = "3"
members = ["core", "lmv-ring", "standalone"]

[workspace.package]
# Single source of truth for the application version (ADR-0005). Member crates
# inherit it via `version.workspace = true`; cargo-release bumps this one line
# once per plan at the architect close. Separate axis from LMV_ABI_VERSION.
version = "0.9.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/eastsphere/light-music-visualizer"

# Baseline lints shared by every workspace member (opted in with
# `lints.workspace = true`). Kept to the universally-safe set here; hot-path
# panic denial is a per-module pragma (Plan 0002 Phase 2), not workspace-wide.
[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
# Lower priority so specific lints above override the group (Cargo requires
# lint groups to sit below individual lints).
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "warn"
unimplemented = "warn"

# NFR section 4: small release binaries - LTO on, symbols stripped.
[profile.release]
lto = "fat"
strip = "symbols"
codegen-units = 1
