# The shared brain: DSP + render engine + scenes (ADR-0001).
# Package is named lmv-core because plain "core" collides with the std `core` crate.
[package]
name = "lmv-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "lmv_core"
# rlib for the standalone (native Rust), cdylib/staticlib for the foobar C++ shim (C ABI).
crate-type = ["rlib", "cdylib", "staticlib"]

[lints]
workspace = true

[dependencies]
# FFT for the spectrum path. Pure Rust, ~5 transitive deps (num-* family),
# no unsafe SIMD requirements — well under the NFR 4 dependency gate.
rustfft = "=6.4.1"
# The GPU abstraction ADR-0001 commits to; its transitive weight is the one
# accepted fixed cost (NFR 4).
wgpu = "=30.0.0"
# Blocks on wgpu's async adapter/device futures at init time. Zero deps.
pollster = "=1.0.1"
# Safe [f32] -> [u8] casts for uniform uploads. Zero deps.
bytemuck = { version = "=1.25.2", features = ["derive"] }
