# The shared brain: DSP + render engine + scenes (ADR-0001).
# Package is named lmv-core because plain "core" collides with the std `core` crate.
[package]
name = "lmv-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
# Not a crates.io package - linked by the standalone (path) and the foobar
# plugin (C ABI). publish=false also lets cargo-deny accept the intra-workspace
# path dependency under wildcards=deny.
publish = false

[lib]
name = "lmv_core"
# rlib for the standalone (native Rust), cdylib/staticlib for the foobar C++ shim (C ABI).
crate-type = ["rlib", "cdylib", "staticlib"]

[lints]
workspace = true

[dependencies]
# FFT for the spectrum path. Pure Rust, ~5 transitive deps (num-* family),
# no unsafe SIMD requirements — well under the NFR 4 dependency gate.
rustfft = "=6.4.1"
# The GPU abstraction ADR-0001 commits to; its transitive weight is the one
# accepted fixed cost (NFR 4).
wgpu = "=30.0.0"
# Blocks on wgpu's async adapter/device futures at init time. Zero deps.
pollster = "=1.0.1"
# Safe [f32] -> [u8] casts for uniform uploads. Zero deps.
bytemuck = { version = "=1.25.2", features = ["derive"] }
# Preset data layer (ADR-0002): derive-deserialize the small TOML preset schema.
# serde is the de-facto standard and toml's own dependency; derive keeps the
# schema declarative. Both pinned exact per NFR 4.
serde = { version = "=1.0.229", features = ["derive"] }
toml = "=1.1.3"
