# The shared brain: DSP + render engine + scenes (ADR-0001).
# Package is named lmv-core because plain "core" collides with the std `core` crate.
[package]
name = "lmv-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
# Not a crates.io package - linked by the standalone (path) and the foobar
# plugin (C ABI). publish=false also lets cargo-deny accept the intra-workspace
# path dependency under wildcards=deny.
publish = false

[lib]
name = "lmv_core"
# rlib for the standalone (native Rust), cdylib/staticlib for the foobar C++ shim (C ABI).
crate-type = ["rlib", "cdylib", "staticlib"]

[lints]
workspace = true

[dependencies]
# The lock-free SPSC ring, extracted so Miri can check its `unsafe` without our
# wgpu graph (Plan 0005). Intra-workspace path dep, re-exported by `audio`.
lmv-ring = { path = "../lmv-ring" }
# FFT for the spectrum path. Pure Rust, ~5 transitive deps (num-* family),
# no unsafe SIMD requirements — well under the NFR 4 dependency gate.
rustfft = "=6.4.1"
# The GPU abstraction ADR-0001 commits to; its transitive weight is the one
# accepted fixed cost (NFR 4). Backends are gated per-OS (NFR 12 primary memory
# lever): default features are off and the shipped backend is added below, so
# only one backend's code compiles - dropping the Vulkan/GL/WebGPU paths that are
# dead weight on the shipped target. `wgsl` keeps our shader frontend; `std` and
# `parking_lot` match wgpu's native defaults.
wgpu = { version = "=30.0.0", default-features = false, features = [
    "std",
    "parking_lot",
    "wgsl",
] }
# Blocks on wgpu's async adapter/device futures at init time. Zero deps.
pollster = "=1.0.1"
# Safe [f32] -> [u8] casts for uniform uploads. Zero deps.
bytemuck = { version = "=1.25.2", features = ["derive"] }
# Preset data layer (ADR-0002): derive-deserialize the small TOML preset schema.
# serde is the de-facto standard and toml's own dependency; derive keeps the
# schema declarative. Both pinned exact per NFR 4.
serde = { version = "=1.0.229", features = ["derive"] }
toml = "=1.1.3"
# On-canvas text for the standalone browse overlay / HUD (ADR-0009), behind the
# non-default `text` feature so the plugin/default/core-test build never carries
# its sizable tree. Pinned to the glyphon release whose wgpu dep resolves to our
# =30.0.0 (0.12.0 -> wgpu ^30); a wgpu bump would need a matching glyphon bump.
glyphon = { version = "=0.12.0", optional = true }

[features]
# On-canvas text rendering (glyphon). Off by default: only the standalone opts
# in (ADR-0009); the plugin cdylib/staticlib, the default `cargo build`, and the
# core test suite all compile glyphon out entirely.
text = ["dep:glyphon"]

# Dev-only image I/O for the headless-capture golden harness (ADR-0011): decode
# committed baseline PNGs to compare against a fresh render. Dev-dependency scope
# keeps it out of the shipped cdylib/staticlib entirely. Trimmed to just the PNG
# codec (default features pull avif/exr/webp/rayon we never touch); pinned exact
# per NFR 4 / the hygiene guard.
[dev-dependencies]
image = { version = "=0.25.10", default-features = false, features = ["png"] }

# Per-OS wgpu backend (NFR 12). Only the shipped backend compiles: DX12 on
# Windows, Metal on macOS. NFR 2 already fixes DX12 as the Windows baseline and
# NFR does the same for Metal on macOS, so no supported machine loses rendering
# by dropping the Vulkan/GL fallback (recorded in Plan 0011 risks, not an ADR).
# default-features stays off here too so these declarations don't re-enable the
# dropped backends when Cargo unions the feature sets.
[target.'cfg(windows)'.dependencies]
wgpu = { version = "=30.0.0", default-features = false, features = ["dx12"] }

[target.'cfg(target_os = "macos")'.dependencies]
wgpu = { version = "=30.0.0", default-features = false, features = ["metal"] }
