# Standalone desktop shell: winit window + OS loopback capture feeding lmv-core.
[package]
name = "standalone"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
# The app binary, never published to crates.io; publish=false also lets
# cargo-deny accept its path dependency on lmv-core under wildcards=deny.
publish = false

[[bin]]
name = "lmv"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
lmv-core = { path = "../core" }
# Windowing (ADR-0001 fixes winit for the standalone shell).
winit = "=0.30.13"

# WASAPI loopback capture. Narrow feature set keeps the transitive cost low;
# winit already pulls windows-sys, so the ecosystem dependency is a sunk cost.
[target.'cfg(windows)'.dependencies]
windows = { version = "=0.62.2", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
] }

# macOS loopback capture via ScreenCaptureKit (macOS 13+). The objc2 family
# is the maintained Apple-framework binding set; mac-only, so zero cost on
# the Windows build.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "=0.6.4"
objc2-foundation = "=0.3.2"
objc2-screen-capture-kit = { version = "=0.3.2", features = [
    "SCError",
    "SCShareableContent",
    "SCStream",
    "block2",
    "dispatch2",
    "objc2-core-media",
] }
objc2-core-media = "=0.3.2"
objc2-core-audio-types = "=0.3.2"
objc2-core-foundation = "=0.3.2"
block2 = "=0.6.2"
dispatch2 = "=0.3.1"
