# Standalone desktop shell: winit window + OS loopback capture feeding lmv-core.
[package]
name = "standalone"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
# The app binary, never published to crates.io; publish=false also lets
# cargo-deny accept its path dependency on lmv-core under wildcards=deny.
publish = false

[[bin]]
name = "lmv"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
# `text` enables the glyphon on-canvas text seam (ADR-0009) — the standalone is
# the only frontend that opts in; the plugin build leaves it off.
lmv-core = { path = "../core", features = ["text"] }
# Windowing (ADR-0001 fixes winit for the standalone shell).
winit = "=0.30.13"
# Per-user operator config (Plan 0009): derive-(de)serialize the small
# `config.toml`. Same crates the core preset layer already uses; pinned exact
# to the same versions per NFR 4 / the hygiene guard.
serde = { version = "=1.0.229", features = ["derive"] }
toml = "=1.1.3"

# Dev-only image I/O for the headless-capture `shot` example (ADR-0011): encode
# captured RGBA to PNG and tile the contact sheet. Dev-dependency scope keeps it
# out of the shipped `lmv.exe` entirely (Plan 0012 sized that binary). Trimmed to
# the PNG codec only; pinned exact per NFR 4 / the hygiene guard.
[dev-dependencies]
image = { version = "=0.25.10", default-features = false, features = ["png"] }

# WASAPI loopback capture. Narrow feature set keeps the transitive cost low;
# winit already pulls windows-sys, so the ecosystem dependency is a sunk cost.
[target.'cfg(windows)'.dependencies]
windows = { version = "=0.62.2", features = [
    "Win32_Foundation",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Variant",
] }

# macOS loopback capture via ScreenCaptureKit (macOS 13+). The objc2 family
# is the maintained Apple-framework binding set; mac-only, so zero cost on
# the Windows build.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "=0.6.4"
objc2-foundation = "=0.3.2"
objc2-screen-capture-kit = { version = "=0.3.2", features = [
    "SCError",
    "SCShareableContent",
    "SCStream",
    "block2",
    "dispatch2",
    "objc2-core-media",
] }
objc2-core-media = "=0.3.2"
objc2-core-audio-types = "=0.3.2"
objc2-core-foundation = "=0.3.2"
block2 = "=0.6.2"
dispatch2 = "=0.3.1"
